--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -11,7 +11,7 @@
                             <img src="{{imageBaseUrl + auction.file }}">
                         </div>
                         <div class="auction__image" *ngIf="auction.file.includes('.mp4')">
-                            <video controls="false" autoplay="autoplay" loop>
+                            <video class="auctionVideo" controls="false" autoplay="autoplay" loop>
                                 <source src="{{imageBaseUrl + auction.file}}" type="video/mp4">
                                 Your browser does not support the video tag.
                               </video>
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box__offer" *ngIf="!showAuctionForm[i]">
+                    <div class="box__offer" *ngIf="userRole !== 'Admin' && !showAuctionForm[i]">
                         <div class="offer__btn">
                             <a href="javascript:;" (click)="showAuctionForm[i] = !showAuctionForm[i]">OFFER</a>
                         </div>
@@ -90,14 +90,17 @@
                         </div>
                     </div>
                     <br>
-                    <div class="actionsButton" *ngIf="(auth.isAuthenticated$ | async) && userRole == 'Admin'">
+                    <ul class="actionsButton" *ngIf="(auth.isAuthenticated$ | async) && userRole == 'Admin'">
                         <li>
                             <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#auctionModal"(click)=" updateAuction(auction)" >Update</a>
                         </li>
                         <li>
                             <a href="javascript:;" style="color: red" (click)="removeAuction(auction._id)">Delete</a>
                         </li>
-                    </div>
+                        <li>
+                            <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#myModal" (click)="getBid(auction._id)">View Bid</a>
+                        </li>
+                    </ul>
                 </div>
                 
             </div>
@@ -106,7 +109,6 @@
     <br>
     <div class="buy__btn text-center mb-5" *ngIf="(auth.isAuthenticated$ | async) && userRole == 'Admin'">
         <a  data-bs-toggle="modal" data-bs-target="#auctionModal" (click)="changeTitle('Add Auction')" href="javascript:;">Add Auction</a>
-        <a  data-toggle="modal" data-target="#myModal" href="javascript:;">View Bids</a>
     </div>
       
 <!-- add auction form -->
@@ -151,19 +153,19 @@
   </div>
 
   <!-- Bids Modal -->
-  <div class="modal" id="myModal">
-    <div class="modal-dialog">
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
   
         <!-- Modal Header -->
         <div class="modal-header">
           <h4 class="modal-title">All Bids</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
         </div>
   
         <!-- Modal body -->
         <div class="modal-body">
-            <table class="table text-center table-bordered">
+            <table class="table text-center" *ngIf="bids && bids.length > 0; else noThings">
                 <thead>
                     <tr>
                     <th>AuctionId</th>
@@ -173,7 +175,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let bid of bids; let i = index">
+                    <tr *ngFor="let bid of bids; let i = index" >
                     <td>{{bid.auctionId}}</td>
                     <td>{{bid.email}}</td>
                     <td>{{bid.xrpBid}}</td>
@@ -181,11 +183,16 @@
                     </tr>
                 </tbody>
             </table>
+            <ng-template #noThings>
+                <div class="text-center">
+                    No Bids
+                </div>
+            </ng-template>
         </div>
 
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
         </div>
   
      </div>
