updated header links

--- a/src/app/frontend/header/header.component.html
+++ b/src/app/frontend/header/header.component.html
@@ -8,13 +8,13 @@
             </div>
             <div class="navigation">
                 <ul>
-                    <li><a href="../../../assets/images/faktury-whitepaper.pdf" target="_blank">Whitepaper</a></li>
+                    <li><a href="https://faktury.gitbook.io/whitepaper/" target="_blank">Whitepaper</a></li>
                     <li><a routerLink="/">FAQs</a></li>
                     <li><a routerLink="/">Swap</a></li>
                     <li><a routerLink="/">About</a></li>
                     <li><a  routerLink="/auction" routerLinkActive="active">Auction</a></li>
                     <li><a routerLink="/shop" routerLinkActive="active">Shop</a></li>
-                    <li><a routerLink="/">Metalink</a></li>
+                    <li><a href="https://lnk.bio/faktury.dev" target="_blank">Metalink</a></li>
                     <li>
                         <div class="nav__m__buttons">
                             <div class="ctaa" *ngIf="(auth.isAuthenticated$ | async) === false">
