--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -168,10 +168,10 @@
                 </div>
                 <div class="buy__head__button">
                     <div class="buy__head__btn">
-                        <a href="https://xumm.app/detect/xapp:xumm.dex?base=FAKTURY+rNwBNkHz3ZAnx77XFjGR8nRnZHw4gKgmpr&quote=xrp" target="_blank">Xumm Purchase</a>
+                        <a href="https://xumm.app/detect/xapp:xumm.dex?issuer=rNwBNkHz3ZAnx77XFjGR8nRnZHw4gKgmpr&currency=46414B5455525900000000000000000000000000" target="_blank">Xumm Purchase</a>
                     </div>
                     <div class="buy__head__btn">
-                        <a href="javascript:;">TRUST LINE</a>
+                        <a href=" https://xrpl.services/?issuer=rNwBNkHz3ZAnx77XFjGR8nRnZHw4gKgmpr&currency=FAKTURY&limit=1630" target="_blank">TRUST LINE</a>
                     </div>
                 </div>
             </div>
