make changes in bid and auction modules

--- a/src/app/frontend/auction/auction.component.css
+++ b/src/app/frontend/auction/auction.component.css
@@ -146,6 +146,11 @@ table {
     pointer-events: all !important;
   }
 
+  .auctionPurchasedClass{
+    cursor: not-allowed;
+    pointer-events: all !important;
+    color: blue
+  }
   .a_btn {
     background: #111914;
     border-radius: 10px;
