scroll to block

--- a/src/app/frontend/header/header.component.html
+++ b/src/app/frontend/header/header.component.html
@@ -9,7 +9,7 @@
             <div class="navigation">
                 <ul>
                     <li><a href="https://faktury.gitbook.io/whitepaper/" target="_blank" (click)="removeNavigationClass()">Whitepaper</a></li>
-                    <li><a routerLink="/" (click)="removeNavigationClass()">FAQs</a></li>
+                    <li><a (click)="navigate('faqs')">FAQs</a></li>
                     <li><a routerLink="/" (click)="removeNavigationClass()">Swap</a></li>
                     <li><a routerLink="/" (click)="removeNavigationClass()">About</a></li>
                     <li><a  routerLink="/auction" routerLinkActive="active" (click)="removeNavigationClass()">Auction</a></li>
