--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -364,7 +364,7 @@
         </div>
     </section>
 
-    <section id="faq" class="faq--section">
+    <section id="faqs" class="faq--section">
         <div class="container">
             <div class="faq__main">
                 <div class="faq__head">
