small changes in auction and header components

--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -31,8 +31,8 @@
                                 <p>Winner is :</p>
                             </div>
                             <div class="bid__desc">
-                                <div class="desc__image">
-                                    <img src="../../../assets/images/bid-desc.svg">
+                                <div class="desc__image__class">
+                                    <img src="../../../assets/images/head-image.svg">
                                 </div>
                                 <div class="desc__text">
                                     <p>{{obscureEmail(auction.winner[0].email)}}</p>
