--- a/src/app/frontend/header/header.component.html
+++ b/src/app/frontend/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__wrap">
             <div class="brand-logo">
-                <a routerLink="/" routerLinkActive="active">
+                <a (click)="navigate('top')" class="navigateClass">
                     <img src="../../../assets/images/logo.svg" width="97" height="94" alt="faktury Logo"/>
                 </a>
             </div>
