--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -1,5 +1,5 @@
 <main>
-    <section class="banner--section">
+    <section class="banner--section" id="top">
         <div class="container">
             <div class="banner__wrap">
                 <div class="side__text">
