--- a/src/app/frontend/auction/auction.component.css
+++ b/src/app/frontend/auction/auction.component.css
@@ -169,3 +169,9 @@ table {
         color: #61FA0A;
         text-decoration: none;
     }
+
+    .desc__image__class {
+        width: 40px;
+        height: 40px;
+        margin-right: 1.25em;
+    }
