--- a/src/app/frontend/shop/shop.component.html
+++ b/src/app/frontend/shop/shop.component.html
@@ -35,7 +35,7 @@
                             <form target="_blank">
                                 <button ngbDropdownItem class="paymentBtn" onclick="javascript:window.open('https://xumm.app/detect/request:rG3qGSDskfbFmiftWFBXMroJUSSjmGrADE?amount=1079.097874', '_blank');">Pay with Xumm</button>
                             </form>
-                            <button ngbDropdownItem class="paymentBtn" data-bs-toggle="modal" data-bs-target="#stripeModal" (click)="clickEvent(product.title, product.price, product.isDigital)" >Pay with Stripe</button>
+                            <button ngbDropdownItem class="paymentBtn" data-bs-toggle="modal" data-bs-target="#stripeModal" (click)="setProductValue(product.title, product.price, product.isDigital, product._id, product.image)" >Pay with Stripe</button>
                             </div>
                             <!-- Stripe form -->
                             <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
@@ -49,6 +49,34 @@
                                     <h6 class="modal-title"> {{productTitle}}</h6>
                                     <h6 class="modal-title" class="modalProductPrice"> ($ {{productPrice}}.00)</h6>
                                     <form class="login__form" [formGroup]="stripeForm" (ngSubmit)="createStripeToken(stripeForm.value)" id="payment-form">
+                                            <div class="form-group">
+                                                <label for="first-name">First Name</label>
+                                                <input type="text" id="first-name" class="form-control" formControlName="firstName"
+                                                [ngClass]="{ 'is-invalid': g['firstName'].touched && g['firstName'].errors }">
+                                                <span *ngIf="g['firstName'].touched && g['firstName'].errors?.['required']" class="invalid-feedback">
+                                                    First Name is required
+                                                </span>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="last-name">Last Name</label>
+                                                <input type="text" id="last-name" class="form-control" formControlName="lastName"
+                                                [ngClass]="{ 'is-invalid': g['lastName'].touched && g['lastName'].errors }">
+                                                <span *ngIf="g['lastName'].touched && g['lastName'].errors?.['required']" class="invalid-feedback">
+                                                    Last Name is required
+                                                </span>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="email">Email</label>
+                                                <input type="text" id="email" class="form-control" formControlName="email" readonly value="{{userEmail}}">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="email">XRPL Address</label>
+                                                <input type="text" id="email" class="form-control" formControlName="xrplAddress"
+                                                [ngClass]="{ 'is-invalid': g['xrplAddress'].touched && g['xrplAddress'].errors }">
+                                                <span *ngIf="g['xrplAddress'].touched && g['xrplAddress'].errors?.['required']" class="invalid-feedback">
+                                                    XRPL Address is required
+                                                </span>
+                                            </div>
                                             <div class="form-group" *ngIf="!isDigital">
                                                 <!-- <input type="hidden" formControlName="_id" class="form-control"> -->
                                                 <label for="f-name">Shipping Address</label>
